# teste3

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
projeto_teste/: __init__.py  dataset.py  features.py  plots.py
projeto_teste/modeling/: predict.py  train.py
