[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "projeto_teste"
version = "0.0.1"
description = "This is a test project"
authors = [
  { name = "Pietro (ISQ-NIT)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"


[tool.ruff]
line-length = 99
src = ["projeto_teste"]
include = ["pyproject.toml", "projeto_teste/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["projeto_teste"]
force-sort-within-sections = true

